syntax = "proto3";

package user;

option go_package = "github.com/CpBruceMeena/golang-nexuspoint/proto";

// The User service definition
service UserService {
  // GetUsers returns a list of users
  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse) {}
}

// Request message for GetUsers
message GetUsersRequest {
  // No parameters needed for now
}

// Response message for GetUsers
message GetUsersResponse {
  repeated User users = 1;
}

// User message definition
message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string location = 4;
} 